# car

./: .gitignore  AGENTS.md  README.md
code/: main.py  package.xml  setup.cfg  setup.py
code/components/: __init__.py  ackermann_drive.py  fleet_car_node.py  fleet_models.py  fleet_protocol.py  navigation.py  navigation_protocol.py  radar_driver.py  rear_motor.py  serial_communication.py  steering_servo.py
code/resource/: car_components
code/ros2_ws/src/car_nav_bringup/: package.xml  setup.cfg  setup.py
code/ros2_ws/src/car_nav_bringup/behavior_trees/: navigate_ackermann_pose.xml  navigate_ackermann_position.xml
code/ros2_ws/src/car_nav_bringup/car_nav_bringup/: __init__.py  generate_field_map.py
code/ros2_ws/src/car_nav_bringup/config/: collision_monitor.yaml  field.example.yaml  nav2_params.yaml  vehicle.yaml
code/ros2_ws/src/car_nav_bringup/launch/: bringup.launch.py  hardware.launch.py  nav2.launch.py
code/ros2_ws/src/car_nav_bringup/resource/: car_nav_bringup
code/ros2_ws/src/car_nav_bringup/test/: test_behavior_tree_safety.py  test_generate_field_map.py
code/ros2_ws/src/car_nav_bringup/urdf/: car.urdf.xacro
code/ros2_ws/src/car_ros_bridge/: package.xml  setup.cfg  setup.py
code/ros2_ws/src/car_ros_bridge/car_ros_bridge/: __init__.py  ackermann_base_node.py  cmd_vel_conversion.py  d500_localization_node.py  (+3 more)
code/scripts/: build_ros2.sh  check_ros_graph.sh  install_ros2_nav2.sh  record_nav_debug_bag.sh
code/test/: README-gimbal-test.md  README.md  c10b_a2_a3_gimbal.patch  d500_uart_probe.py  drive_forward_1m_test.py  drive_forward_right_once.py  enable_pwm0_m2.sh  gimbal_host_test.py  hc14_at_probe.py  hc14_ground_link_test.py  hc14_set_baud.py  rock5a-pwm0-permissions.service  rock5a-pwm0-permissions.sh  rock5a_ssh.py  servo_pulse_test.py  steering_servo_test.py  test_ackermann_drive.py  test_fleet_car_node.py  test_fleet_protocol.py  test_main.py  test_navigation.py  test_navigation_protocol.py  test_radar_correction_mode.py  test_radar_driver.py  test_rear_motor.py  test_serial_communication.py  wheel_test.py
code/test/data/: fleetbus_v1_golden.json
(+9 files in other folders)
