<?xml version="1.0"?>
<package format="3"><name>car_nav_bringup</name><version>0.1.0</version><description>Nav2 bringup for the car.</description><maintainer email="maintainer@example.invalid">car maintainers</maintainer><license>Proprietary</license><buildtool_depend>ament_python</buildtool_depend><exec_depend>launch</exec_depend><exec_depend>launch_ros</exec_depend><exec_depend>nav2_bringup</exec_depend><exec_depend>nav2_collision_monitor</exec_depend><exec_depend>robot_state_publisher</exec_depend><exec_depend>car_ros_bridge</exec_depend><test_depend>python3-pytest</test_depend><export><build_type>ament_python</build_type></export></package>
