<?xml version="1.0"?>
<package format="3"><name>car_ros_bridge</name><version>0.1.0</version><description>ROS adapters for car components.</description><maintainer email="maintainer@example.invalid">car maintainers</maintainer><license>Proprietary</license><buildtool_depend>ament_python</buildtool_depend><exec_depend>rclpy</exec_depend><exec_depend>geometry_msgs</exec_depend><exec_depend>nav_msgs</exec_depend><exec_depend>sensor_msgs</exec_depend><exec_depend>tf2_ros</exec_depend><exec_depend>nav2_msgs</exec_depend><exec_depend>diagnostic_msgs</exec_depend><exec_depend>std_msgs</exec_depend><exec_depend>car_components</exec_depend><test_depend>python3-pytest</test_depend><export><build_type>ament_python</build_type></export></package>
